[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>", "Dusan Malusev <dusan@dusanmalusev.dev>"]
edition = "2021"

[dependencies]
bytes = "1.6.0"
nom = "7.1.3"
serde = { version = "1.0.202", features = ["rc", "derive", "serde_derive"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
sharded-slab = "0.1.7"
tracing = { version = "0.1.40", features = ["async-await", "attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
    "parking_lot",
    "serde",
    "serde_json",
    "time",
    "tracing",
    "once_cell",
    "env-filter",
] }
