[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = [
    "Codecrafters <hello@codecrafters.io>",
    "Dusan Malusev <dusan@dusanmalusev.dev>",
]
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["async-await", "attributes"] }
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.18", features = [
    "parking_lot",
    "time",
    "tracing",
    "once_cell",
    "env-filter",
] }

redis = { path = "./redis" }

[workspace]
members = ["redis"]
