[package]
name = "redis-starter-rust"
version = "0.1.0"
authors = [
    "Codecrafters <hello@codecrafters.io>",
    "Dusan Malusev <dusan@dusanmalusev.dev>",
]
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["full", "parking_lot", "io-std", "tracing", "test-util"] }
tracing = { version = "0.1.40", features = ["async-await", "attributes"] }
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }
tracing-subscriber = { version = "0.3.18", features = [
    "parking_lot",
    "time",
    "tracing",
    "once_cell",
    "env-filter",
] }

bytes = "1.6.0"
nom = "7.1.3"
serde = { version = "1.0.202", features = ["rc", "derive", "serde_derive"] }
thiserror = "1.0.61"
sharded-slab = "0.1.7"
phf = { version = "0.11.1", features = ["uncased"] }
uncased = "0.9"
itoa = "1.0"

[build-dependencies]
phf = { version = "0.11.1", features = ["uncased"] }
phf_codegen = "0.11.1"
uncased = "0.9"
